--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Courier New", sans-serif;
   background: linear-gradient(88deg, rgb(205, 101, 194) 0%, rgb(223, 212, 108) 100%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+button {
+  cursor: pointer;
 }
